Changed to use Oracle GraalVM v24 (instead of scala-cli's default JVM). Added Typescript, Javascript, and Python 3 patchlet support by using GraalJs and GraalPy (see the updated description).