@@ -1,8 +1,13 @@
+//> using jvm graalvm-oracle:24
+//> using javaOptions --enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow
 //> using scala 2.13.16
 //> using options --deprecation -feature -language:implicitConversions
 //> using dep com.fasterxml.jackson.core:jackson-databind:2.19.2
 //> using dep com.fasterxml.jackson.dataformat:jackson-dataformat-toml:2.19.2
 //> using dep com.jayway.jsonpath:json-path:2.9.0
+//> using dep org.graalvm.polyglot:js:24.2.2
+//> using dep org.graalvm.polyglot:polyglot:24.2.2
+//> using dep org.graalvm.polyglot:python:24.2.2
 //> using dep com.lihaoyi::os-lib:0.11.5
 //> using dep com.lihaoyi::sourcecode:0.4.2
 //> using dep org.scala-lang:scala-compiler:2.13.16
